@@ -5,7 +5,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 Version 1.16-23 (opened August 11, 2009)
 
 	* poolaccum: new function to find the extrapolated richness
-	values (or specpool() estimates) for random accumulation of sites.
+	values (or specpool() estimates) for random accumulation of
+	sites (with summary and plot methods). Arguments (indices) still
+	need consistent naming.
 	
 Version 1.16-22 (closed August 11, 2009)
 
